data/xen/etc/firewall.conf
*filter

# Default Policies
-P INPUT DROP
-P OUTPUT ACCEPT
-P FORWARD ACCEPT

# Allow Loopback Traffic (but not on other adapters)
-A INPUT -i lo -j ACCEPT
-A INPUT ! -i lo -d 127.0.0.1/8 -j REJECT
-A OUTPUT -o lo -j ACCEPT

# Allow Pings
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT

# Allow SSH with rate limiting
-A INPUT -p tcp -m tcp --dport ssh -m conntrack --ctstate NEW -m recent --set --name DEFAULT --rsource
-N LOG_AND_DROP
-A INPUT -p tcp -m tcp --dport ssh -m conntrack --ctstate NEW -m recent --update --seconds 60 --hitcount 4 --name DEFAULT --rsource -j LOG_AND_DROP
-A INPUT -p tcp -m tcp --dport ssh -m state --state NEW -m recent --update --seconds 60 --hitcount 4 --name DEFAULT --rsource -j LOG_AND_DROP
-A INPUT -p tcp -m tcp --dport ssh -j ACCEPT
-A LOG_AND_DROP -j LOG --log-prefix "iptables deny: " --log-level 7
-A LOG_AND_DROP -j DROP

# Continue allowing established transactions
-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

# Prevent Bridge Cross-talk
-A FORWARD -i eth0 -o xenbr1 -j REJECT
-A FORWARD -i eth0 -o eth1 -j REJECT
-A FORWARD -i eth1 -o xenbr0 -j REJECT
-A FORWARD -i eth1 -o eth0 -j REJECT

COMMIT
